start command addded

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.ts",
     "dev": "nodemon --watch ./ --ext ts,json --exec ts-node index.ts",
     "prisma:generate": "prisma generate"
   },
