--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node index.ts",
     "dev": "nodemon --watch ./ --ext ts,json --exec ts-node index.ts",
-    "prisma:generate": "prisma generate",
-  
-    "deploy": "npm run build && your-deploy-command-here" 
+    "prisma:generate": "prisma generate"
   },
   "keywords": [],
   "author": "",
